--- a/plugins/owl.style.css
+++ b/plugins/owl.style.css
@@ -97,10 +97,10 @@
         height: 270px;
     }
 
-    /* four-column section */
-    /* .four-column-section {
+    /* four-column section  */
+   .four-column-section {
         bottom: 140px !important;
-    } */
+    }
     
 }
 
