--- a/plugins/swiper-style.css
+++ b/plugins/swiper-style.css
@@ -73,12 +73,16 @@
   border-radius: 5px;
 }
 
+#swiper-pagination-1.swiper-pagination-bullets {
+
+  position: relative;
+  bottom: -30px !important;
+}
 .swiper-pagination-bullet {
   background-color: #FF7500;
 
   position: relative;
-  bottom: -10px;
-
+  bottom: -10px !important;
 }
 
 
